Fix: amend display properties of myth images

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             The definition of Autism has changed over time and continues to change.
                         </p>
                         <p class="center-text">
-                            <img class="img-reduce img-responsive" src="assets/images/asd-mod.png"
+                            <img class="img-reduce img-responsive" src="assets/images/aut-modified.png"
                             alt="asd spectrum"
                             aria-label="autism spectrum disorder spectrum rainbow with categories.">
                         <p>
@@ -130,7 +130,7 @@
                 <div class="col-sm-10 col-md-8 col-lg-6">
                     <button class="btn btn-block btn-icon" type="button"
                     data-target="#autism2" aria-expanded="false">
-                    Spectrum Versus Disorder</button>
+                    Spectrum Versus Constellation</button>
                     <div class="content-hidden" id="autism2">
                         <p>
                             Spectrum is often replaced by constellation as spectrum implies a degree of severity across all difficulties when in fact a person may be
@@ -166,7 +166,7 @@
                                      and that does not necessarily mean mutism or selective mutism—it could literally mean partly delayed speech.
                                 </p>
                                 <p class="center-text">
-                                    <img class="img-small img-responsive" src="assets/images/high-low-mod.png"
+                                    <img class="img-reduce img-responsive" src="assets/images/high-low-mod.png"
                                     alt="high low graph"
                                     aria-label="Image identifying high and low traits and public perception.">
                                 </p>
