--- a/myth.html
+++ b/myth.html
@@ -153,13 +153,13 @@
                                 <div class="myth-card-inner">
                                     <div class="myth-card-front">
                                     <br>
-                                    <h1>Autism is a disease?</h1> 
+                                    <h1>Autism is a disease</h1> 
                                     <br>
-                                    <p class="center-text">
+                                    <div class="center-text">
                                         <img class="img-myth img-responsive" src="assets/images/disease.jpg"
                                         alt="image of microbes"
                                         aria-label="Multicoloured image of microbes">
-                                    </p>  
+                                    </div>  
                                     </div>
                                     <div class="myth-card-back">
                                     <br>
@@ -179,11 +179,11 @@
                                         <br>
                                         <h1>Autism has a cure</h1> 
                                         <br>
-                                        <p class="center-text">
+                                        <div class="center-text">
                                             <img class="img-myth img-responsive" src="assets/images/cure-modified.png"
                                             alt="cure image"
                                             aria-label="large capsule containing cure tablets">
-                                        </p>  
+                                        </div>  
                                         </div>
                                         <div class="myth-card-back">
                                     <br>
@@ -341,8 +341,9 @@
                                     <div class="myth-card-front">
                                         <br>
                                         <h1>They'll Grow out of it</h1> 
+                                        <br>
                                         <p class="center-text">
-                                            <img class="img-myth img-responsive" src="assets/images/growing-up-mod.png"
+                                            <img class="img-myth img-responsive" src="assets/images/growing_up.jpg"
                                             alt="image of microbes"
                                             aria-label="Multicoloured image of microbes">
                                         </p>  
