--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div class="row bottom-pad">
             <div class="center">
+            <a id="start-of-index"></a>
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg active btn-info" aria-pressed="true" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
@@ -369,7 +370,8 @@
                 <div class="col-md-8 col-sm-10 col-xl-6">
                     <h2 class="sub-title">Want to learn more?</h2>
                     <p class ="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn about the various and oft quoted incorrect understanding and beliefs 
-                    about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a></p>
+                    about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a>
+                    To go to the top of this page click <a id="start-of-index">HERE</a></p>
                     <br>
                 </div>
             </div>
