--- a/quiz.html
+++ b/quiz.html
@@ -30,6 +30,7 @@
         </div>
         <div class="row bottom-pad">
             <div class="center">
+            <a id="start-of-quiz"></a>
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
@@ -73,7 +74,7 @@
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
                                 </p>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                    To go to the top of this page, click <a id="start-of-quiz">HERE.</a>
                                 </p>
                             </div>
                         </div>
