--- a/myth.html
+++ b/myth.html
@@ -28,6 +28,7 @@
                 </div>
             </div> 
         </div>
+        <a id="start-of-myths"></a>
         <div class="row bottom-pad">
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
@@ -162,10 +163,15 @@
                                     </div>  
                                     </div>
                                     <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth1</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">Autism is not a disease and Autistic people are not ill.
+                                        It is a neuro-developmental disorder that can manifest itself in communication impairment or difficulty 
+                                        in social skills and interaction.
+                                    </p>
+                                    <p class="myth-card-text"> Autistic people can still live completely independent, meaningful, 
+                                        healthy and productive lives, especially with the aid of therapy and professional intervention.
+                                        The cause is unknown: but you can't catch it!
+                                    </p> 
                                   </div>
                                 </div>
                               </div>   
@@ -186,10 +192,14 @@
                                         </div>  
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth2</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        Autism is a neurological condition and as such, the brain is wired differently. It's probably been like
+                                         that since before birth but we're not sure as its impossible to diagnose earlier than 2 or 3 but it does show up on brain scans.
+                                    <p class="myth-card-text">
+                                        There are many snake oil salesmen who peddle various therapies and diets but
+                                         at best it's a con trick and at worse downright dangerous.
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -217,10 +227,15 @@
                                         </p>  
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth3</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        In the late 1990s a dubious research study was published in a journal that drew a highly tenuous
+                                        link between vaccines and autism. Based on an experiment not conducted not up to scientific standards,
+                                         it was later completely debunked as deceptive, inaccurate and non-replicable.
+                                    </p> 
+                                    <p class="myth-card-text">
+                                        The Doctor behind the study was subsequently stripped of his medical license.  
+                                    </p>
                                   </div>
                                 </div>
                             </div>
@@ -239,10 +254,15 @@
                                             aria-label="image of child struggling with learning">  
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth4</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        It should be clear by now  that autism is a spectrum, and so everyone’s learning ability is different. 
+                                        So, educating someone with autism takes an understanding of their needs, abilities and learning style.
+                                    </p> 
+                                    <p class="myth-card-text">
+                                        Some may require more understanding, method adaptation and therapy to achieve the same level of learning,
+                                         but some may have a higher than average intelligence.                
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -270,10 +290,17 @@
                                         </p>  
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth5</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class=myth-card-text>
+                                        Whilst real, It's a myth to assume that ALL autistic people have a savant skill.
+                                         In fact, no more than  10% of people with autism display some advanced level of a particular skill. Even among those who do,,
+                                          the skills themselves are varied in type and degree.
+                                    </p> 
+                                    <p class="myth-card-text">
+                                        With often specific and focused interest in a topic,
+                                        sometimes to the exclusion of all else. They gain a high level of knowledge
+                                         on the specific subject.
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -294,10 +321,15 @@
                                         </p> 
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth6</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        This is particularly unfair and harmful for autistic people.
+                                        People with autism are fully capable of feeling all emotions. Autism impacts on an ability to communicate 
+                                        and socially interact and can be misinterpreted as being a lack of interest  to make connections and relationships.
+                                    </p>
+                                    <p class="myth-card-text">
+                                        We also struggle with interpreting other people’s emotions, body language and expressions, and social nuances
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -325,10 +357,16 @@
                                         </p>  
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth7</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        Both misleading and untrue, it's partially understandable as the number of people
+                                        diagnosed with autism has increased over the last few decades. Of course, this is actually a reflection
+                                         of increased understanding and diagnosis of ASD/ASC.
+                                    </p> 
+                                    <p class="myth-card-text">
+                                        In the past, many of these undiagnosed would have simply been treated as socially awkward,
+                                         insensitive, introverted or a combination of them all.
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -349,10 +387,16 @@
                                         </p>  
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth8</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        One cannot grow out of autism. It is a lifelong disorder and there is no ‘cure’ for 
+                                        autism through either therapy, medicine or special diet.
+                                    </p> 
+                                    <p class="myth-card-text">
+                                        Although a lifelong condition, there is much that can be achieved through 
+                                         support for the development of coping strategies, new skills and communication/social abilities,
+                                          to help improve day to day life and mental health.
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -380,10 +424,16 @@
                                         </p> 
                                         </div>
                                         <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth 9</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
+                                    <h1>Myth!</h1> 
+                                    <p class="myth-card-text">
+                                        Some autistic people can speak and communicate verbally, others can’t.
+                                         Some autistic people have higher IQs than other people and some have IQ levels within the average range.
+                                    </p> 
+                                    <p class="myth-card-text">
+                                        Of course speech is only one form of communication but we humans 
+                                        seem to think it's everything; so, if you can't talk, you can't communicate (or comprehend).
+                                        My son couldn't talk until 5 but could read at 3.
+                                    </p>
                                   </div>
                                 </div>
                               </div>
@@ -402,13 +452,17 @@
                                             alt="bad parents"
                                             aria-label="mother winger fagging and telling off a small child">
                                         </p>  
-                                        </div>
-                                        <div class="myth-card-back">
-                                    <br>
-                                    <h1>myth10</h1> 
-                                    <p>this is the truth</p> 
-                                    <p>honest guv</p>
-                                  </div>
+                                    </div>
+                                    <div class="myth-card-back">
+                                        <h1>Myth!</h1>
+                                        <p class="myth-card-text">Way back in the 50s,there was a theory "the Refrigerator Mother Hypothesis".
+                                            This theory suggested that mothers who were not warm emotionally and could be neglectful or 
+                                            distant would traumatise their child so much that it would cause autism.
+                                        </p>
+                                        <p class="myth-card-text">Of course, this completely bogus theory was debunked scientifically decades ago. Unfortunately,
+                                            the myth still persists. 
+                                        </p> 
+                                    </div>
                                 </div>
                               </div>
                         </div>
@@ -422,8 +476,33 @@
                     <div class ="col-xl-3">
                     </div>
                     <div class="col-xl-6">
-                        <h2 class="sub-title">Next Actions</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eius nihil voluptate ipsa, sapiente ullam dignissimos amet soluta facilis iure fuga illum facere nobis ea explicabo sint voluptatibus molestias odit?</p>
+                        <div class="row no-gutters solid-border"></div>
+                        <br>
+                        <h3 class="blue-text center-text">I'll add an 11th but it really should be number 1</h3>
+                        <br>
+                        <h3 class="purple-text center-text font-weight-bold">
+                            We're all a bit autistic aren't we?
+                        </h3>
+                        <p>
+                            Presumably in the same way we're all a little bit in a wheelchair or all women are a bit pregnant.
+                        </p>
+                        <p>
+                            It's obviously well meaning but about the worst thing you can say as it underlines in thick lines and bold capitals 
+                            that you just don't get the nature of Autism and how it affects those with it. 
+                        </p>
+                        <p>
+                            Your brain is either wired broadly similarly to everyone else or it isnt. Or it may be broadly similarly
+                             wired to another group of the human race. If the number of those people is significantly numerically smaller then it's the exception. 
+                        </p>
+                        <p>
+                            Of course with so much under diagnosis, late diagnosis and masking, the true number of those "on the spectrum" is difficult to assess 
+                            but if it's much larger than currently thought then it could be less statistically "not usual" and more just differently normal.
+                        </p>
+                        <p>
+                            Why not head over to the <a href="quiz.html">quiz page</a> and see how you get on. 
+                            To go to the top of this page click <a rel="noopener" href="#start-of-myths">HERE.</a>
+                        </p>
+                        <br>
                     </div>
                 </div>
             </div>
@@ -440,7 +519,7 @@
  <div class="container-fluid">
     <div id="footer-details" class="row no-gutters solid-border">
         <div class="col-sm-6">
-            <h3 class="uppercase sub-title">Contact</h3>
+            <h4 class="uppercase sub-title">Contact</h4>
             <p class="foot-title">                    
                 <a href="contact.html" class="hvr-grow" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
             </p>
@@ -448,7 +527,7 @@
         </div>
 <!-- Social Media Links   -->
         <div class="col-sm-6">
-            <h3 class="uppercase sub-title">Social</h3>
+            <h4 class="uppercase sub-title">Social</h4>
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
