feat: add js functionality to load card images from array, updat with resized images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="btn btn-lg active btn-info" aria-pressed="true" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
               <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
+              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="whatif.html">Contact</a>
             </div>
         </div>    
     </div>
@@ -371,7 +371,7 @@
                     <h2 class="sub-title">Want to learn more?</h2>
                     <p class ="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn about the various and oft quoted incorrect understanding and beliefs 
                     about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a>
-                    To go to the top of this page click <a id="start-of-index">HERE</a></p>
+                    To go to the top of this page click <a rel="noopener" href="#start-of-index">HERE</a></p>
                     <br>
                 </div>
             </div>
