--- a/quiz.html
+++ b/quiz.html
@@ -74,7 +74,7 @@
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
                                 </p>
                                 <p>
-                                    To go to the top of this page, click <a id="start-of-quiz">HERE.</a>
+                                    To go to the top of this page, click <a rel="noopener" href="#start-of-quiz">HERE.</a>
                                 </p>
                             </div>
                         </div>
