fix reduce padding on social links on smaller screns, fix typos

--- a/myth.html
+++ b/myth.html
@@ -56,9 +56,9 @@
                             Autism is a spectrum condition and affects people in different ways.
                              Like all people, autistic people have their own strengths and weaknesses. 
                             Here is a list of difficulties autistic people may share, including the two key difficulties
-                             <strong>(in Bold)</strong> required for a diagnosis: 
+                             <strong>(<span style="color:red">in red</span>)</strong> required for a diagnosis: 
                         </p>
-                        <p class="indent-para">
+                        <p class="indent-para purple-text">
                             <strong>Social communication:</strong>
                         </p>
                         <ul class="myth">
@@ -72,7 +72,7 @@
                                 Repeating what others say to them (this is called echolalia).
                             </li>
                         </ul>
-                        <p class="indent-para">
+                        <p class="indent-para purple-text">
                             <strong>Social interaction:</strong>
                         </p>
                         <ul class="myth">
