--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="btn btn-lg active btn-info" aria-pressed="true" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
               <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="whatif.html">Contact</a>
+              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
     </div>
