fix error in background file path

--- a/myth.html
+++ b/myth.html
@@ -133,7 +133,6 @@
                                 Eat exactly the same food for breakfast, or lunch or dinner...
                             </li>
                         </ul>
-                        </p>
                         <p class="center-text">
                             Why not check out the top 10 myths about Autism below. 
                             Click on a myth to flip it and learn the truth. 
@@ -154,10 +153,10 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                             <br>
-                            <h1>Autism is a disease</h1>  
+                            <h2 class="bigger-font">Autism is a disease</h2>  
                             </div>
                             <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">Autism is not a disease and Autistic people are not ill.
                                 It is a neuro-developmental disorder that can manifest itself in communication impairment or difficulty 
                                 in social skills and interaction.
@@ -176,12 +175,11 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                                 <br>
-                                <h1>Autism has a cure</h1> 
+                                <h2 class="bigger-font">Autism has a cure</h2> 
                                 <br>
-                            
                                 </div>
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 Autism is a neurological condition and as such, the brain is wired differently. It's probably been like
                                  that since before birth but we're not sure as its impossible to diagnose earlier than 2 or 3 but it does show up on brain scans.
@@ -207,10 +205,10 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                                 <br>
-                                <h1>Vaccines cause Autism</h1>   
+                                <h2 class="bigger-font">Vaccines cause Autism</h2>   
                                 </div>
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 In the late 1990s a dubious research study was published in a journal that drew a highly tenuous
                                 link between vaccines and autism. Based on an experiment not conducted up to scientific standards,
@@ -230,10 +228,10 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                                 <br>
-                                <h1>Autism = Learning Disability</h1> 
+                                <h2 class="bigger-font">Autism = Learning Disability</h2> 
                             </div>
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 It should be clear by now  that autism is a spectrum, and so everyone’s learning ability is different. 
                                 Educating someone with autism takes an understanding of their needs, abilities and learning style.
@@ -260,10 +258,10 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                                 <br>
-                                <h1>Autism = Savant</h1> 
+                                <h2 class="bigger-font">Autism = Savant</h2> 
                                 </div>
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class=myth-card-text>
                                 Whilst real, It's a myth to assume that ALL autistic people have a savant skill.
                                  In fact, no more than 10% of people with autism display some advanced level of a particular skill. Even among those who do,
@@ -284,10 +282,10 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                                 <br>
-                                <h1>Lacking Emotion</h1> 
+                                <h2 class="bigger-font">Lacking Emotion</h2> 
                                 </div> 
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 This is particularly unfair and harmful for autistic people.
                                 People with autism are fully capable of feeling all emotions. Autism impacts on the ability to communicate 
@@ -314,10 +312,10 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                             <br>
-                            <h1>It's an Epidemic</h1>    
+                            <h2 class="bigger-font">It's an Epidemic</h2>    
                             </div>
                             <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 Both misleading and untrue, it's partially understandable as the number of people
                                 diagnosed with autism has increased over the last few decades. Of course, this is actually a reflection
@@ -338,11 +336,11 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                                 <br>
-                                <h1>They'll Grow out of it</h1> 
+                                <h2 class="bigger-font">They'll Grow out of it</h2> 
                                 
                                 </div>
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 One cannot grow out of autism. It is a lifelong disorder and there is no ‘cure’ for 
                                 autism through either therapy, medicine or special diet.
@@ -370,7 +368,7 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                             <br>
-                            <h1>Autism = Non-Verbal</h1>    
+                            <h2 class="bigger-font">Autism = Non-Verbal</h2>    
                                 </div>
                                 <div class="myth-card-back">
                             <h1>Myth!</h1> 
@@ -394,7 +392,7 @@
                         <div class="myth-card-inner">
                             <div class="myth-card-front">
                             <br>
-                            <h1>Caused by Bad Parenting</h1>    
+                            <h2 class="bigger-font">Caused by Bad Parenting</h2>    
                             </div>
                             <div class="myth-card-back">
                                 <h1>Myth!</h1>
