fix errrs in menu aria labels

--- a/quiz.html
+++ b/quiz.html
@@ -34,7 +34,7 @@
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
-              <a class="btn btn-lg active btn-primary" aria-pressed="true" aria-label="Go to the quiz page (opens in a new tab)"  href="quiz.html">Quiz</a>
+              <a class="btn btn-lg active btn-primary" aria-label="Go to the quiz page (opens in a new tab)"  href="quiz.html">Quiz</a>
               <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
