--- a/myth.html
+++ b/myth.html
@@ -33,7 +33,7 @@
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
-              <a class="btn btn-lg active btn-danger" aria-pressed="true" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
+              <a class="btn btn-lg active btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
               <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
               <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
@@ -371,7 +371,7 @@
                             <h2 class="bigger-font">Autism = Non-Verbal</h2>    
                                 </div>
                                 <div class="myth-card-back">
-                            <h1>Myth!</h1> 
+                            <h2>Myth!</h2> 
                             <p class="myth-card-text">
                                 Some autistic people can speak and communicate verbally, others can’t.
                                  Some autistic people have higher IQs than other people and some have IQ levels within the average range.
@@ -395,7 +395,7 @@
                             <h2 class="bigger-font">Caused by Bad Parenting</h2>    
                             </div>
                             <div class="myth-card-back">
-                                <h1>Myth!</h1>
+                                <h2>Myth!</h2>
                                 <p class="myth-card-text">Way back in the 50s,there was a theory "the Refrigerator Mother Hypothesis".
                                     This theory suggested that mothers who were not warm emotionally and could be neglectful or 
                                     distant would traumatise their child so much that it would cause autism.
@@ -501,7 +501,7 @@
 </div>
 </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
-    <script type="text/javascript" src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>    
 </body>
