feat add link ti index.html from contact modals

--- a/contact.html
+++ b/contact.html
@@ -112,10 +112,11 @@
                     <div class="contact-modal-content">
                         <h2 class="sub-title top-pad">Message Received!</h2>
                         <div class ="center-img">
-                            <br>                       
+                            <br>
+                            <a href="index.html">                     
                             <img class="logo-img" src="assets/images/ribbon.png"
                                 alt="Autism Ribbon Logo"
-                            aria-label="Multicoloured Ribbon with autism awareness text.">
+                            aria-label="Multicoloured Ribbon with autism awareness text."></a>
                         </div>
                         <br>
                         <h2 class="modal-text">Thank You for taking the time to contact me</h2>
@@ -134,10 +135,11 @@
                     <div class="contact-modal-content">
                         <h2 class="sub-title top-pad">Message failed to send!</h2>
                         <div class ="center-img">
-                            <br>                       
+                            <br> 
+                            <a href="index.html">                      
                             <img class="logo-img" src="assets/images/broken_rainbow.png"
                             alt="broken rainbow image"
-                            aria-label="Multicoloured broken rainbow in shape of a heart split in two.">
+                            aria-label="Multicoloured broken rainbow in shape of a heart split in two."></a>
                         </div>
                         <br>
                         <h2 class="modal-text">Thank You for taking the time to contact me</h2>
