fix amend color scheme on menus to meet WAVE contrast rules

--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
         <div class="row bottom-pad">
             <div class="center">
 <!-- button colors to replicate the Autism jigsaw logo -->
-              <a class="btn btn-lg btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
+              <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
-              <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg active btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
+              <a class="btn btn-lg btn-quiz" aria-label="This is the current page, quiz (opens in a new tab)" href="quiz.html">Quiz</a>
+              <a class="btn btn-lg active btn-contact" aria-label="Go to the contacts page" href="contact.html">Contact</a>
             </div>
         </div>    
     </div>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="form-row text-center">
                         <div class="col">
-                            <button type="submit" class="btn btn-lg btn-primary">Message Me!</button>
+                            <button type="submit" class="btn btn-lg btn-message">Message Me!</button>
                         </div>                            
                     </div>  
                 </form>
