--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="center">
             <a id="start-of-index"></a>
     <!-- button colors to replicate the Autism jigsaw logo -->
-              <a class="btn btn-lg active btn-info" aria-label="This is the current page, home" href="index.html">Home</a>
+              <a class="btn btn-lg active btn-home" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
-              <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
+              <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
+              <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
     </div>
