fix apply revised contrast colors

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
               <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
               <a class="btn btn-lg btn-quiz" aria-label="This is the current page, quiz (opens in a new tab)" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg active btn-contact" aria-label="Go to the contacts page" href="contact.html">Contact</a>
+              <a class="btn btn-lg active btn-contact" aria-label="Go to the contacts page">Contact</a>
             </div>
         </div>    
     </div>
@@ -138,7 +138,7 @@
                             <br> 
                             <a href="index.html">                      
                             <img class="logo-img" src="assets/images/broken_rainbow.png"
-                            alt="broken rainbow image"
+                            alt="broken rainbow"
                             aria-label="Multicoloured broken rainbow in shape of a heart split in two."></a>
                         </div>
                         <br>
