--- a/myth.html
+++ b/myth.html
@@ -33,7 +33,7 @@
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the Home page (opens in a new tab)" href="index.html">Home</a>
-              <a class="btn btn-lg active btn-danger" aria-label="This is the current page, Myth" href="myth.html">Myths</a>
+              <a class="btn btn-lg active btn-danger" aria-label="This is the current page, Myth">Myths</a>
               <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
               <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
@@ -56,7 +56,7 @@
                             Autism is a spectrum condition and affects people in different ways.
                              Like all people, autistic people have their own strengths and weaknesses. 
                             Here is a list of difficulties autistic people may share, including the two key difficulties
-                             <strong>(<span style="color:red">in red</span>)</strong> required for a diagnosis: 
+                             <strong>(<span style="color:#93102d">below</span>)</strong> required for a diagnosis: 
                         </p>
                         <p class="indent-para purple-text">
                             <strong>Social communication:</strong>
